--- a/CSS/PersonalPage.css
+++ b/CSS/PersonalPage.css
@@ -59,7 +59,7 @@ footer{position: absolute;
 
 }
 
-#bio{font-size:130%;
+#bio{font-size:1em;
 text-align:right;
 width:80%;
 left:15%;
@@ -77,7 +77,7 @@ font-size:130%;}
   #jon{width: 6em;
 height:10%;
 border-radius:75px;
-border: 0.3em solid rgba(169,169,169,0.7);
+border: 0.1em solid rgba(169,169,169,0.7);
 left:4em;
 top:4em;
 position: relative;}
