--- a/CSS/PersonalPage.css
+++ b/CSS/PersonalPage.css
@@ -61,7 +61,7 @@ footer{position: absolute;
 }
 
 #bio{font-size:1em;
-    
+    color:rgba(236, 230, 230, 0.89);
 text-align:right;
 width:80%;
 left:15%;
