--- a/CSS/PersonalPage.css
+++ b/CSS/PersonalPage.css
@@ -8,10 +8,13 @@ body{ font-family: 'Raleway', sans-serif;
 box-sizing: border-box;
 }
     
-#left{height:100%;
+#left{left:0px;
+    height:100%;
+    margin:auto auto auto 0px;
     width:50%;
+    padding-left:10px;
+    padding-right:10px;
     font-size:120%;
-    float:left;
 background-color:rgba(169,169,169,0.7);
 border-radius:50px;
 bottom:10%;
@@ -21,11 +24,15 @@ position: relative;
    -webkit-box-shadow: inset 0 0 3px #000000;
    box-shadow:         inset 0 0 3px #000000;}
 
-#right{ height:100%;
+#right{ right:0px;
+     height:100%;
     width:50%;
+    margin:auto 0px auto auto;
     font-size:120%;
     bottom:3.3em;
-    float:right;
+    clear: both;
+    padding-left:10px;
+    padding-right:10px;
 background-color:rgba(169,169,169,0.7);
 border-radius:50px;
 position: relative;
@@ -36,7 +43,7 @@ border:1px solid black;}
 
 .text{text-align:center;}
  
-header{height:25%;
+nav{height:25%;
 width: 100%;
 background-color:green;
 border-radius:20px;
@@ -57,7 +64,7 @@ footer{position: absolute;
     box-shadow:         inset 0 0 5px #000000;
     border:1px solid black;
     border-radius: 25;
-
+text-align: center;
 }
 
 #bio{font-size:1em;
@@ -66,7 +73,8 @@ text-align:right;
 width:80%;
 left:15%;
 bottom:4em;
-position: relative;}
+position: relative;
+font-size: .9em;}
 
 article{height:50%;
 width: 99%;
@@ -78,7 +86,7 @@ font-size:130%;}
   }
   #jon{width: 6em;
 height:10%;
-border-radius:75px;
+border-radius:250px;
 border: 0.1em solid rgba(169,169,169,0.7);
 left:4em;
 top:4em;
@@ -89,30 +97,37 @@ position: relative;}
 text-decoration: none;
 
 }
-.links:hover{font-size:110%;
-color:blue;}
+.links:hover{font-size:120%;
+color:blue;
+font-style: oblique;}
 @media only screen and (max-width:600px){
     html{overflow:auto;}
     body{}
-    #right{}
     #bio{font-size:.7em;
     width:80%;
 bottom:-5%;}
-    #left{bottom:-15%;
-    font-size:1em;
-width:10em;
-left:0em;
-bottom:2em;}
-    #right{bottom:15%;
-    font-size:1em;
+    #left{padding:10px 10px 10px 10px;
+    margin:auto;
+width:40%;
+left:-100px;
+}
+    #right{width:40%;
+        margin:auto;
+        left:108px;
+        padding:10px 10px 10px 10px;
+    bottom:150px;
 }
     article{}
     footer{bottom:0;}
     #jon{top:0em;
-    left:5em;}
+    clear:both;
+left:190px;}
     .links{}
     footer{width:94%;
     border-radius:17px;
 bottom:-2.5em;
 }
     }
+    .container-foreground{max-width:960px;
+    margin:auto;
+}
