--- a/CSS/PersonalPage.css
+++ b/CSS/PersonalPage.css
@@ -12,9 +12,8 @@ box-sizing: border-box;
     height:100%;
     margin:auto auto auto 0px;
     width:50%;
-    padding-left:10px;
-    padding-right:10px;
-    font-size:120%;
+   padding:auto;
+    font-size:100%;
 background-color:rgba(169,169,169,0.7);
 border-radius:50px;
 bottom:10%;
@@ -28,11 +27,10 @@ position: relative;
      height:100%;
     width:50%;
     margin:auto 0px auto auto;
-    font-size:120%;
+    font-size:100%;
     bottom:3.3em;
     clear: both;
-    padding-left:10px;
-    padding-right:10px;
+    padding:auto;
 background-color:rgba(169,169,169,0.7);
 border-radius:50px;
 position: relative;
@@ -84,17 +82,22 @@ font-size:130%;}
 :-webkit-scrollbar {
     display: none;
   }
-  #jon{width: 6em;
+  #jon{width: 13%;
 height:10%;
-border-radius:250px;
-border: 0.1em solid rgba(169,169,169,0.7);
-left:4em;
+border-radius:75px;
+border: 1px solid rgba(169,169,169,0.7);
+left:0px;
 top:4em;
 position: relative;}
-  
+
+   .container-foreground{max-width:960px;
+    margin:auto;
+}
 
 .links{color:white;
 text-decoration: none;
+
+
 
 }
 .links:hover{font-size:120%;
@@ -110,12 +113,14 @@ bottom:-5%;}
     margin:auto;
 width:40%;
 left:-100px;
+font-size:.8em;
 }
     #right{width:40%;
         margin:auto;
         left:108px;
         padding:10px 10px 10px 10px;
     bottom:150px;
+    font-size:.8em;
 }
     article{}
     footer{bottom:0;}
@@ -128,6 +133,4 @@ left:190px;}
 bottom:-2.5em;
 }
     }
-    .container-foreground{max-width:960px;
-    margin:auto;
-}
+ 
