--- a/CSS/PersonalPage.css
+++ b/CSS/PersonalPage.css
@@ -12,15 +12,10 @@ box-sizing: border-box;
 display:flex;}
 
 #left{
-    
-    
-  
     width:50%;
- 
     font-size:120%;
 background-color:rgba(169,169,169,0.7);
 border-radius:50px;
-
 border: 1px solid black;
 position: relative;
 -moz-box-shadow:    inset 0 0 3px #000000;
@@ -100,21 +95,17 @@ text-decoration: none;
 color:rgb(62, 8, 255);
 font-style: oblique;}
 @media only screen and (max-width:600px){
+    
     html{overflow:auto;}
+    .container-left-right{height:41vw;}
     body{}
     #bio{font-size:.7em;
     width:80%;
 bottom:-5%;}
-    #left{padding:10px 10px 10px 10px;
-    margin:auto;
-width:40%;
-left:-100px;
-}
-    #right{width:40%;
-        margin:auto;
-        left:108px;
-        padding:10px 10px 10px 10px;
-    bottom:150px;
+    #left{
+   
+    }
+    #right{
 }
     article{}
     footer{bottom:0;}
@@ -127,4 +118,7 @@ left:190px;}
 bottom:-2.5em;
 }
     }
- 
+    @media only screen and (max-width:1440px){
+        .container-left-right{height:70px;
+        font-size:2vw;}
+    }
